--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="fr.univnantes.atal.android.tachoid"
-      android:versionCode="1"
-      android:versionName="1.0">
+          package="fr.univnantes.atal.android.tachoid"
+          android:versionCode="1"
+          android:versionName="1.0">
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name=".activity.DomainsActivity"
                   android:label="@string/app_name">
@@ -11,5 +11,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.TasksActivity"
+                  android:label="@string/app_name" />
     </application>
 </manifest>
