--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,15 +3,19 @@
           package="fr.univnantes.atal.android.tachoid"
           android:versionCode="1"
           android:versionName="1.0">
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher"
+        android:allowBackup="true">
         <activity android:name=".activity.DomainsActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".activity.TasksActivity"
-                  android:label="@string/app_name" />
+                  android:label="@string/app_name"
+                  android:configChanges="orientation" />
     </application>
 </manifest>
